fix(ekilex): align footer logo with bottom of footer

--- a/ekilex-app/src/main/resources/scss/_footer.scss
+++ b/ekilex-app/src/main/resources/scss/_footer.scss
@@ -31,7 +31,7 @@
       height: 120px;
       position: absolute;
       right: 8vw;
-      bottom: 0;
+      bottom: -36px;
       // Subtract padding from image size
       background-size: calc(100% - 16px);
       padding: 8px;
